fix: error filed get double border on focus

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -35,7 +35,8 @@ a {
 }
 
 .field-no-rounded {
-  @apply appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 dark:bg-neutral-900 dark:border-neutral-800 dark:placeholder-gray-500 dark:text-neutral-400 focus:outline-none focus:ring-sky-500 focus:border-sky-500 focus:z-10 sm:text-sm;
+  @apply appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 dark:bg-neutral-900 focus:outline-none focus:border-sky-500 focus:z-10 sm:text-sm dark:border-neutral-800 dark:placeholder-gray-500 dark:text-neutral-400 dark:focus:border-sky-500;
+  box-shadow: unset !important;
 }
 
 .field {
